<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SchoolActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textforStudent"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginTop="@dimen/dimens_30dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:gravity="center"
            android:text="@string/send_for_teacher"
            android:textSize="@dimen/dimens_25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/studentRecyclerview"
            android:layout_width="@dimen/dimens_0dp"
            app:layout_constraintBottom_toTopOf="@id/chattinglayoutStudent"
            android:layout_height="@dimen/dimens_0dp"
            app:layout_constraintEnd_toEndOf="@id/textforStudent"
            app:layout_constraintStart_toStartOf="@id/textforStudent"
            app:layout_constraintTop_toBottomOf="@id/textforStudent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/chattinglayoutStudent"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/setdatainstudent"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:hint="@string/enter_massage"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@id/textforStudent"
            app:layout_constraintStart_toStartOf="@id/textforStudent"
            app:layout_constraintTop_toBottomOf="@id/studentRecyclerview" />

        <TextView
            android:id="@+id/setdatainstudent"
            android:layout_marginTop="@dimen/dimens_30dp"
            android:hint="@string/massage_data"
            android:layout_width="@dimen/dimens_0dp"
            app:layout_constraintBottom_toTopOf="@id/sendteacherBtn"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/chattinglayoutStudent"
            app:layout_constraintStart_toStartOf="@id/chattinglayoutStudent"
            app:layout_constraintTop_toBottomOf="@id/chattinglayoutStudent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendteacherBtn"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_30dp"
            android:text="@string/send_massage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/chattinglayoutStudent"
            app:layout_constraintStart_toStartOf="@id/chattinglayoutStudent"
            app:layout_constraintTop_toBottomOf="@id/setdatainstudent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>